fixes layout issues in cascading list

--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
@@ -6,6 +6,7 @@
     border-right: 1px solid rgba(255,255,255,.15);
     /* min-width: 16rem; */
     /* flex-shrink: 0; */
+    flex-basis: 16em;
 }
 
 .CascadingListItem-title {
